scheek-resumeTwoColumnTemplateCSS-Updates-11.13.25

--- a/index.html
+++ b/index.html
@@ -365,8 +365,9 @@
 
           <div class="portfolio-content">
             <h3>Healthcare Data Breach Map</h3>
-            <p><i>U.S. states choropleth map showing healthcare data breaches (Oct 2024–2025), built using Datawrapper and
-              Google Sheets.</i></p>
+            <p><i>U.S. states choropleth map showing healthcare data breaches (Oct 2024–2025), built using Datawrapper
+                and
+                Google Sheets.</i></p>
           </div>
           <div class="tags">
             <span>Datawrapper</span><span>Google Sheets</span>
@@ -380,8 +381,9 @@
           <div class="portfolio-content">
             <h3>Cyberfolio: A Systems-Engineered Personal Platform</h3>
             <p><i>E2E (End-to-end) migration and rebuild of a static platform into a modular Bootstrap site integrating
-              AOS, Swiper.js, custom JS, and multiple integrations.</i></p>
-              <a href="/tech-portfolio/web-dev-case-study-portfolio-details/" class="portfolio-details-link">Read More →</a>
+                AOS, Swiper.js, custom JS, and multiple integrations.</i></p>
+            <a href="/tech-portfolio/web-dev-case-study-portfolio-details/" class="portfolio-details-link">Read More
+              →</a>
           </div>
           <div class="tags">
             <span>GitHub
@@ -643,6 +645,7 @@
           </div>
         </div>
 
+        <!--==============================RESUME COLUMN 1==========================================-->
         <!-- Neon Framed Resume Body -->
         <div class="container neon-paragraph" data-aos="fade-up" data-aos-delay="100">
           <div class="row">
@@ -660,6 +663,7 @@
                   </em>
                 </p>
               </div>
+
               <!--EDUCATION-->
               <h3 class="my-3">Education</h3>
               <div class="resume-item ps-4 pb-4 position-relative">
@@ -674,6 +678,8 @@
                 <p><em>North Carolina A&amp;T State University, Greensboro, NC</em></p>
               </div>
             </div>
+
+            <!--==============================RESUME COLUMN 2==========================================-->
             <!--EXPERIENCE-->
             <div class="col-lg-6">
               <h3 class="my-3">Experience</h3>
