--- a/index.html
+++ b/index.html
@@ -653,6 +653,7 @@
               <h3 class="my-3">Summary</h3>
               <div class="resume-item ps-4 position-relative">
                 <h4 class="mb-2">Sasha Cheek</h4>
+                <div class="t-divider t-node" aria-hidden="true"></div>
                 <p class="mb-3">
                   <em>
                     Systems integration engineer and freelance science writer with roots at NASA, bridging engineering
@@ -668,14 +669,16 @@
               <h3 class="my-3">Education</h3>
               <div class="resume-item ps-4 pb-4 position-relative">
                 <h4 class="mb-2">Master of Arts in Science Writing</h4>
-                <h5 class="py-1 px-2 mb-2">2025 - 2027</h5>
-                <p><em>Johns Hopkins University, Baltimore, MD (Remote)</em></p>
+                <p class="r-year">2025 - 2027</p>
+                <div class="t-divider t-node" aria-hidden="true"></div>
+                <p class="em"><b><i>Johns Hopkins University, Baltimore, MD (Remote)</i></b></em></p>
               </div>
 
               <div class="resume-item ps-4 position-relative">
                 <h4 class="mb-2">Bachelor of Science in Electronics Engineering Technology (ABET-Accredited)</h4>
-                <h5 class="py-1 px-2 mb-2">2015 - 2018</h5>
-                <p><em>North Carolina A&amp;T State University, Greensboro, NC</em></p>
+                <p class="r-year">2015 - 2018</p>
+                <div class="t-divider t-node" aria-hidden="true"></div>
+                <p class="em"><b><i>North Carolina A&amp;T State University, Greensboro, NC</i></b></em></p>
               </div>
             </div>
 
@@ -685,8 +688,9 @@
               <h3 class="my-3">Experience</h3>
               <div class="resume-item ps-4 pb-4 position-relative">
                 <h4 class="mb-2">Technical Integrations Specialist</h4>
-                <h5 class="py-1 px-2 mb-2">2023 - Present</h5>
-                <p><em>Indeed.com, Research Triangle Park, NC (Remote)</em></p>
+                <p class="r-year">2023 - Present</p>
+                <div class="t-divider t-node" aria-hidden="true"></div>
+                <p class="em"><b><i>Indeed.com, Research Triangle Park, NC (Remote)</i></b></em></p>
                 <p class="description"><span class="bullet">&bull; Manage ILM (Integraton Lifecycle Management) for
                     high
                     spending partners' integrations, including configuration, testing, deployment, monitoring, and
@@ -710,8 +714,9 @@
 
               <div class="resume-item ps-4 position-relative">
                 <h4 class="mb-2">Freelance Science Writer</h4>
-                <h5 class="py-1 px-2 mb-2">2024 - Present</h5>
-                <p><em>Independent, Research Triangle Park, NC</em></p>
+                <p class="r-year">2024 - Present</p>
+                <div class="t-divider t-node" aria-hidden="true"></div>
+                <p class="em"><b><i>Independent, Research Triangle Park, NC</i></b></em></p>
                 <p class="description"><span class="bullet">&bull; Interviewed leading experts, including 2 particle
                     physicists and the Harvard director of neurology, to produce
                     authoritative science articles about cosmic radiation impact on astronauts and BCIs
@@ -729,8 +734,9 @@
 
               <div class="resume-item ps-4 position-relative">
                 <h4 class="mb-2">Technical Program Manager</h4>
-                <h5 class="py-1 px-2 mb-2">2019 - 2022</h5>
-                <p><em>Various Projects, Research Triangle Park, NC (Remote) </em></p>
+                <p class="r-year">2019 - 2022</p>
+                <div class="t-divider t-node" aria-hidden="true"></div>
+                <p class="em"><b><i>Various Projects, Research Triangle Park, NC (Remote)</i></b></em></p>
                 <p><em><b>Microsoft (2022)</b></em></p>
                 <p class="description"><span class="bullet">&bull; Led migration for 3500+ CDN (content delivery
                     network)
@@ -751,8 +757,9 @@
 
               <div class="resume-item ps-4 position-relative">
                 <h4 class="mb-2">Technical Business Analyst</h4>
-                <h5 class="py-1 px-2 mb-2">2019 - 2021</h5>
-                <p><em>Hudson MX, Atlanta, GA </em></p>
+                <p class="r-year">2019 - 2021</p>
+                <div class="t-divider t-node" aria-hidden="true"></div>
+                <p class="em"><b><i>Hudson MX, Atlanta, GA </i></b></em></p>
                 <p class="description"><span class="bullet">&bull; Led API gateway and credential management to
                     streamline
                     secure partner integrations while shadowing DevOps SME</span></p>
