--- a/index.html
+++ b/index.html
@@ -737,7 +737,7 @@
                 <p class="r-year">2019 - 2022</p>
                 <div class="t-divider t-node" aria-hidden="true"></div>
                 <p class="em"><b><i>Various Projects, Research Triangle Park, NC (Remote)</i></b></em></p>
-                <p><em><b>Microsoft (2022)</b></em></p>
+                <p class="project"><b><i>MICROSOFT (2022)</i></b></p>
                 <p class="description"><span class="bullet">&bull; Led migration for 3500+ CDN (content delivery
                     network)
                     pages, and made Microsoft products more accessible
@@ -745,7 +745,7 @@
                 <p class="description"><span class="bullet">&bull; Communicated technical CDN workflows to global
                     stakeholders via automated dashboards (Power BI/Azure
                     DevOps), reducing misalignment by 30%</span></p>
-                <p><em><b>Credit Karma (2021 - 2022)</b></em></p>
+                <p class="project"><b><i>CREDIT KARMA (2021 - 2022)</i></b></p>
                 <p class="description"><span class="bullet">&bull; Onboarded the highest number of partner
                     integrations
                     during tenure while owning 7-8 concurrent projects,
