--- a/index.html
+++ b/index.html
@@ -680,7 +680,197 @@
                 <div class="t-divider t-node" aria-hidden="true"></div>
                 <p class="em"><b><i>North Carolina A&amp;T State University, Greensboro, NC</i></b></em></p>
               </div>
-            </div>
+
+              <!--PUBLICATIONS-->
+              <h3 class="my-3">Publications</h3>
+              <div class="resume-item ps-4 pb-4 position-relative">
+                <ul class="pub-list" style="list-style-type:disc;">
+                  <li>Cheek, S. (2025, November 3).
+                    <a href="https://hackernoon.com/how-telepathic-music-inspires-disabled-creatives">"How Telepathic
+                      Music Inspires Disabled Creatives." <i>Hackernoon</i>.</a>
+                  </li>
+                  <li>Cheek, S. (2024, April 11).
+                    <a href="https://sashacheek.com/articles/david-bowies-ode-to-sci-fi-and-space-science/">David
+                      Bowie’s Ode to Sci-Fi and Space Science. <i>Portfolio Site</i>.</a>
+                  </li>
+                  <li>Cheek, S. (2024, April 1).
+                    <a
+                      href="https://medium.com/@sashacheek100/automated-love-how-ai-became-the-new-face-of-romance-900d9d59a079">Automated
+                      Love: How AI Became the New Face of Romance. <i>Medium</i>.</a>
+                  </li>
+                </ul>
+              </div>
+
+              <!-- SKILLS SECTION -->
+              <h3 class="my-3">Skills</h3>
+
+              <div class="resume-item ps-4 position-relative">
+
+                <!-- Programming Languages -->
+                <h4 class="mb-2">Programming Languages</h4>
+                <div class="t-divider t-node" aria-hidden="true"></div>
+
+                <div class="skill-bar">
+                  <span class="skill-label">Python</span>
+                  <div class="skill-track">
+                    <div class="skill-fill" style="--level: 85%"></div>
+                  </div>
+                </div>
+
+                <div class="skill-bar">
+                  <span class="skill-label">JavaScript</span>
+                  <div class="skill-track">
+                    <div class="skill-fill" style="--level: 75%"></div>
+                  </div>
+                </div>
+
+                <div class="skill-bar">
+                  <span class="skill-label">SQL</span>
+                  <div class="skill-track">
+                    <div class="skill-fill" style="--level: 80%"></div>
+                  </div>
+                </div>
+
+                <!-- Web Technologies -->
+                <h4 class="mb-2">Web Technologies</h4>
+                <div class="t-divider t-node" aria-hidden="true"></div>
+
+                <div class="skill-bar">
+                  <span class="skill-label">HTML5</span>
+                  <div class="skill-track">
+                    <div class="skill-fill" style="--level: 85%"></div>
+                  </div>
+                </div>
+
+                <div class="skill-bar">
+                  <span class="skill-label">CSS3</span>
+                  <div class="skill-track">
+                    <div class="skill-fill" style="--level: 80%"></div>
+                  </div>
+                </div>
+
+                <div class="skill-bar">
+                  <span class="skill-label">Bootstrap</span>
+                  <div class="skill-track">
+                    <div class="skill-fill" style="--level: 75%"></div>
+                  </div>
+                </div>
+
+                <div class="skill-bar">
+                  <span class="skill-label">RESTful APIs</span>
+                  <div class="skill-track">
+                    <div class="skill-fill" style="--level: 85%"></div>
+                  </div>
+                </div>
+
+                <div class="skill-bar">
+                  <span class="skill-label">GraphQL</span>
+                  <div class="skill-track">
+                    <div class="skill-fill" style="--level: 95%"></div>
+                  </div>
+                </div>
+
+                <!-- Data Tools -->
+                <h4 class="mb-2">Data Tools</h4>
+                <div class="t-divider t-node" aria-hidden="true"></div>
+
+                <div class="skill-bar">
+                  <span class="skill-label">Datawrapper</span>
+                  <div class="skill-track">
+                    <div class="skill-fill" style="--level: 90%"></div>
+                  </div>
+                </div>
+
+                <div class="skill-bar">
+                  <span class="skill-label">Google Sheets</span>
+                  <div class="skill-track">
+                    <div class="skill-fill" style="--level: 85%"></div>
+                  </div>
+                </div>
+
+                <div class="skill-bar">
+                  <span class="skill-label">Excel</span>
+                  <div class="skill-track">
+                    <div class="skill-fill" style="--level: 80%"></div>
+                  </div>
+                </div>
+
+                <!-- Version Control -->
+                <h4 class="mb-2">Version Control</h4>
+                <div class="t-divider t-node" aria-hidden="true"></div>
+
+                <div class="skill-bar">
+                  <span class="skill-label">Git</span>
+                  <div class="skill-track">
+                    <div class="skill-fill" style="--level: 80%"></div>
+                  </div>
+                </div>
+
+                <div class="skill-bar">
+                  <span class="skill-label">GitHub</span>
+                  <div class="skill-track">
+                    <div class="skill-fill" style="--level: 80%"></div>
+                  </div>
+                </div>
+
+                <!-- Project Management -->
+                <h4 class="skill-category">Project Management</h4>
+                <div class="t-divider t-node" aria-hidden="true"></div>
+
+                <div class="skill-bar">
+                  <span class="skill-label">Agile</span>
+                  <div class="skill-track">
+                    <div class="skill-fill" style="--level: 90%"></div>
+                  </div>
+                </div>
+
+                <div class="skill-bar">
+                  <span class="skill-label">Scrum</span>
+                  <div class="skill-track">
+                    <div class="skill-fill" style="--level: 85%"></div>
+                  </div>
+                </div>
+
+                <div class="skill-bar">
+                  <span class="skill-label">JIRA</span>
+                  <div class="skill-track">
+                    <div class="skill-fill" style="--level: 85%"></div>
+                  </div>
+                </div>
+
+                <div class="skill-bar">
+                  <span class="skill-label">Azure DevOps</span>
+                  <div class="skill-track">
+                    <div class="skill-fill" style="--level: 80%"></div>
+                  </div>
+                </div>
+
+                <!-- Writing / Communication -->
+                <h4 class="skill-category">Writing & Communication</h4>
+                <div class="t-divider t-node" aria-hidden="true"></div>
+
+                <div class="skill-bar">
+                  <span class="skill-label">Technical Writing</span>
+                  <div class="skill-track">
+                    <div class="skill-fill" style="--level: 95%"></div>
+                  </div>
+                </div>
+
+                <div class="skill-bar">
+                  <span class="skill-label">Science Communication</span>
+                  <div class="skill-track">
+                    <div class="skill-fill" style="--level: 90%"></div>
+                  </div>
+                </div>
+
+                <div class="skill-bar">
+                  <span class="skill-label">Content Creation</span>
+                  <div class="skill-track">
+                    <div class="skill-fill" style="--level: 85%"></div>
+                  </div>
+                </div>
+              </div>
+            </div><!-- End of Resume Column 1 -->
 
             <!--==============================RESUME COLUMN 2==========================================-->
             <!--EXPERIENCE-->
@@ -773,8 +963,22 @@
               </div>
             </div>
           </div>
-      </section>
-      <!-- END OF RESUME SECTION -->
+
+          <!--Resume JS Script -->
+          <script>
+            document.addEventListener("DOMContentLoaded", () => {
+              const bars = document.querySelectorAll("#resume .skill-fill");
+              bars.forEach(bar => {
+                bar.style.width = "0";
+                setTimeout(() => {
+                  bar.style.width = bar.style.getPropertyValue('--level');
+                }, 200);
+              });
+            });
+          </script><!-- End of Resume JS Script -->
+        </div>
+
+      </section><!-- END OF RESUME SECTION -->
 
       <!-- SERVICES SECTION-->
       <section id="services" class="services section-black py-5">
