--- a/index.html
+++ b/index.html
@@ -690,13 +690,13 @@
                       Music Inspires Disabled Creatives." <i>Hackernoon</i>.</a>
                   </li>
                   <li>Cheek, S. (2024, April 11).
-                    <a href="https://sashacheek.com/articles/david-bowies-ode-to-sci-fi-and-space-science/">David
-                      Bowie’s Ode to Sci-Fi and Space Science. <i>Portfolio Site</i>.</a>
+                    <a href="https://sashacheek.com/articles/david-bowies-ode-to-sci-fi-and-space-science/">"David
+                      Bowie’s Ode to Sci-Fi and Space Science." <i>Portfolio Site</i>.</a>
                   </li>
                   <li>Cheek, S. (2024, April 1).
                     <a
-                      href="https://medium.com/@sashacheek100/automated-love-how-ai-became-the-new-face-of-romance-900d9d59a079">Automated
-                      Love: How AI Became the New Face of Romance. <i>Medium</i>.</a>
+                      href="https://medium.com/@sashacheek100/automated-love-how-ai-became-the-new-face-of-romance-900d9d59a079">"Automated
+                      Love: How AI Became the New Face of Romance." <i>Medium</i>.</a>
                   </li>
                 </ul>
               </div>
