--- a/index.html
+++ b/index.html
@@ -569,11 +569,6 @@
           /* List your blog post HTML file paths here */
           const posts = [
             {
-              url: "/blog/2025-10-23-random-notes-from-an-emerging-writers-desk/",
-              image: "assets/img/blog/pic3-blog-01.jpg",
-              date: "Oct 23, 2025"
-            },
-            {
               url: "/blog/2025-11-02-system-overload-troubleshooting-burnout-in-the-human-brain-stack/",
               image: "assets/img/blog/post-slide-2.jpg",
               date: "Nov 2, 2025"
@@ -582,6 +577,11 @@
               url: "/blog/2025-11-10-learning-real-wold-data-manipulation-in-grad-school/",
               image: "assets/img/blog/Mathematician_analyzing_data._-_DPLA_-_60af5ced0800f6f7d6c99b5587a9ae0e.webp",
               date: "Nov 10, 2025"
+            },
+            {
+              url: "/blog/2025-11-16-using-ai-as-a-tool/",
+              image: "assets/img/blog/eye-glitch-art--blog-carousel-image-pinterest.webp",
+              date: "Nov 16, 2025"
             }
           ];
 
